Defect Fix Table row data not centered on home page

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -60,3 +60,8 @@ body {
     margin-left: -15px;
 }
 
+td {
+    text-align: center;
+    vertical-align: middle;
+  }
+
